fixed error images and font not showing on github pages

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url(//db.onlinewebfonts.com/c/7d460b18433753a097e5bc2bad7c8dd9?family=Norse);
-
 :root,
 body {
     margin: 0;
@@ -44,18 +42,16 @@ body {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-
-
 .hero-head h1 {
     color: white;
     margin: 0;
     font-size: 8rem;
     font-weight: bold;
-    font-family: 'Norse';
+    font-family: 'Norse'
 }
 
 .hero-head .logo {
-    height: 6rem;
+    height: 10rem;
     min-width: auto;
     object-fit: contain;
 }
